# osmprj

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  blog.html  index.html  osmprj.toml  pixi.toml  prek.toml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  maintenance.yml  other.yml  support.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  smoke-test.yml
assets/css/: styles.20161366.css  styles.27aac584.css  styles.8fb8ff62.css  styles.df0ddc1d.css
assets/js/: 01a85c17.b68eb448.js  03de58d5.d26d0937.js  0e384e19.ff5916c4.js  14eb3368.01590bd0.js  14eb3368.105e9e42.js  17896441.1af390c7.js  17896441.af36e0c9.js  1df93b7f.699e1428.js  1df93b7f.8c5c5e28.js  1df93b7f.b9dff323.js  1df93b7f.c308ab73.js  1df93b7f.ec7cae23.js  237.597d0a4e.js  255ded7d.14023d36.js  36994c47.fdc6f4d0.js  3c7568a6.37028b23.js  436.deec4795.js  456.c14de1e1.js  4fb269b8.78a0adaf.js  5e95c892.c33e9430.js  621db11d.31665566.js  64de60ec.14365b01.js  6875c492.6aab7e0e.js  785.d32243bd.js  7b89b718.6ad1e1cd.js  7bf8fa02.cb9886ad.js  801be650.3fee2681.js  801be650.4e2528ca.js  814f3328.555e14ac.js  864.5aae0f8e.js  9.67797f3c.js  956ba2e7.87986950.js  9be67041.bea1fcb5.js  9e4087bc.36b1a411.js  a6aa9e1f.a546ffff.js  a7456010.d2fd442a.js  a7bd4aaa.eb9ec6e3.js  a94703ab.50723b48.js  a94703ab.6a75fe49.js  aba21aa0.15d08ab1.js  (+15 more)
blog/: archive.html  atom.xml  authors.html  rss.xml  tags.html
blog/2026/05/07/: introducing-osmprj.html
blog/tags/: design.html
docs/: docker-compose.yaml  docusaurus.config.ts  getting-started.html  intro.html  package-lock.json  package.json
docs/blog/: 2026-05-07-introducing-osmprj.md  authors.yml
docs/category/: guides.html
docs/docs/: getting-started.md  intro.md
docs/docs/guides/: configuration.md  managing-sources.md  storing-credentials.md  syncing-data.md  themes.md
docs/docs/reference/: configuration.md
docs/docs/reference/commands/: _category_.json  add.md  init.md  remove.md  status.md  sync.md  themes-list.md
docs/guides/: configuration.html  managing-sources.html  syncing-data.html  themes.html
docs/src/css/: custom.css
docs/src/pages/: index.tsx
docs/src/theme/Footer/Layout/: index.tsx
docs/static/: demo.cast  osmprj.cast
examples/: germany_cities_config.json
openspec/changes/add-docusaurus-docs-site/: tasks.md
openspec/changes/add-pixi-pack-installer/: tasks.md
openspec/changes/archive/2026-04-26-sync-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-27-implement-init-add-rust/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-27-integration-tests-end-to-end/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-27-rust-scaffold/: proposal.md  tasks.md
openspec/changes/archive/2026-04-28-remove-source-command/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-03-consistent-color-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-03-theme-plugin-system/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-08-add-docusaurus-docs-site/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-local-test-http-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-13-pipelined-sync-with-concurrency-controls/: tasks.md
openspec/changes/pipelined-sync-with-concurrency-controls/: design.md  proposal.md
openspec/changes/rust-scaffold/: design.md
openspec/changes/scaffold-project/: design.md  proposal.md  tasks.md
openspec/changes/sync-command/: tasks.md
openspec/changes/theme-plugin-system/: design.md  tasks.md
openspec/specs/child-process-credential-isolation/: spec.md
openspec/specs/color-output/: spec.md
openspec/specs/credential-masking/: spec.md
openspec/specs/credential-resolution/: spec.md
openspec/specs/geofabrik-index/: spec.md
openspec/specs/installer-smoke-test/: spec.md
openspec/specs/lock-file/: spec.md
openspec/specs/osm2pgsql-tuner/: spec.md
openspec/specs/pgpass-support/: spec.md
openspec/specs/pipelined-sync/: spec.md
openspec/specs/project-config/: spec.md
openspec/specs/release-checksums/: spec.md
openspec/specs/release-signing/: spec.md
openspec/specs/remove-source/: spec.md
openspec/specs/rust-add-command/: spec.md
openspec/specs/rust-cli/: spec.md
openspec/specs/rust-config/: spec.md
openspec/specs/rust-db/: spec.md
openspec/specs/rust-init-command/: spec.md
openspec/specs/shell-linting/: spec.md
openspec/specs/sync-command/: spec.md
openspec/specs/test-http-server/: spec.md
openspec/specs/themepark-cache/: spec.md
osmprj/: cache.py  charts.py  db.py  http.py  main.py  osm.py  types.py  validators.py
osmprj/commands/: prepare.py  report.py
osmprj/reports/: amenities.py
osmprj/reports/sql/: amenity_counts_by_city.sql  parking_space_by_city.sql
recipe/: bld.bat  build.bat  build.sh  recipe.yaml  variants.linux-aarch64.yaml  variants.osx-arm64.yaml  variants.win-64.yaml  variants.yaml
scripts/: install.ps1  install.sh  osmprj.asciinema.sh
src/: config.rs  db.rs  error.rs  geofabrik.rs  lock.rs  main.rs  output.rs  theme_registry.rs  themepark.rs  tuner.rs  url_utils.rs
src/commands/: add.rs  init.rs  mod.rs  remove.rs  status.rs  sync.rs  themes.rs
tests/data/: geofabrik-index-v1.json
tests/integration/: __init__.py  _platform.py  conftest.py  test_add.py  test_credentials.py  test_init.py  test_remove.py  test_status.py  test_stubs.py  test_sync.py  test_sync_e2e.py  test_sync_errors.py  test_themes.py  test_themes_e2e.py
tests/themes/bad-postprocess/: config.lua  theme.toml
themes/generic/: config.lua  theme.toml
themes/nwr/: config.lua  theme.toml
themes/osmcarto/: config.lua  theme.toml
themes/pgosm/: config.lua  theme.toml
themes/pgosm-basic/: config.lua  theme.toml
themes/pgosm-everything/: config.lua  theme.toml
themes/pgosm-minimal/: config.lua  theme.toml
themes/shortbread/: config.lua  theme.toml
themes/shortbread-gen/: config.lua  theme.toml
(+38 files in other folders)
