[package]
name = "osmprj"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "osmprj"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
toml = "0.8"
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
dirs = "5"
indicatif = "0.18.4"
console = "0.16.3"
thiserror = "2.0.18"
miette = { version = "7.6.0", features = ["fancy"] }
sysinfo = "0.33"
md-5 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
dotenvy = "0.15"
# I'm not using these dependencies, but I might in the future
# anyhow = "1.0.102"
# dialoguer = "0.12.0"
