[project]
name = "osmprj"
version = "0.1.0"
description = "OpenStreetMap and PostgreSQL project management tool"
requires-python = ">=3.10"
dependencies = [
    "cyclopts>=3.0",
]

[project.scripts]
osmprj = "osmprj.main:main"
op = "osmprj.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osmprj"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (requires database)",
    "slow: marks tests as slow running",
    "output: marks tests that validate SQL query output",
]
addopts = "--color=yes --doctest-modules --exitfirst --failed-first --verbosity=2 --junitxml=reports/pytest.xml"
xfail_strict = true

[tool.pixi.workspace]
channels = ["https://prefix.dev/gis-forge", "https://prefix.dev/thath", "conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
osmprj = { path = ".", editable = true }
cyclopts = ">=3.0"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
rust = { features = ["rust"], no-default-feature = true }

[tool.pixi.dependencies]
pyosmium = ">=4.3.0"
packaging = ">=23.0"
psycopg = ">=3.1"
sh = ">=1.14.2"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
tomli = ">=2.0.1" #; python_version<'3.11'",
postgresql = ">=18"
postgis = "*"
osmium-tool = "*"
osm2pgsql = ">=2"
platformdirs = ">=4.9.2,<5"

[tool.pixi.feature.rust.dependencies]
rust = ">=1.80"

[tool.pixi.feature.rust.tasks]
build-rust = "cargo build --release"

[tool.pixi.feature.dev.dependencies]
coverage = ">=7.13.1"
pytest = ">=7.0"
pytest-timeout = ">=2.1"
pytest-mock = ">=3.15.1,<4"
pytest-cov = ">=7.0.0,<8"
pytest-sugar = ">=1.1.1,<2"
ruff = ">=0.15.0,<0.16"
mypy = ">=1.19.1,<2"
pre-commit = ">=4.5.1,<5"
pylint = ">=4.0.4,<5"
commitizen = ">=4.13.5,<5"
pg-helper = "*"

[tool.pixi.tasks]

[tool.pixi.feature.dev.tasks]
test = "pytest tests"
test-unit = "pytest tests/unit"
test-integration = "pytest tests/integration"
mypy = "mypy pgosm_flex"
fmt = "ruff format pgosm_flex"
lint = "pylint pgosm_flex"

[tool.coverage.report]  # https://coverage.readthedocs.io/en/latest/config.html#report
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]  # https://coverage.readthedocs.io/en/latest/config.html#run
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["src"]

[tool.coverage.xml]  # https://coverage.readthedocs.io/en/latest/config.html#xml
output = "reports/coverage.xml"

[tool.mypy]  # https://mypy.readthedocs.io/en/latest/config_file.html
junit_xml = "reports/mypy.xml"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.ruff]  # https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "FIX", "T20", "ARG001", "COM812", "D203", "D213", "E501", "PD008", "PD009", "PGH003", "RET504", "S101", "TD003"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
ignore-fully-untyped = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"
